kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affiliateproduct
  namespace: airbnb
  labels:
    app: affiliateproduct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affiliateproduct
  template:
    metadata:
      labels:
        app: affiliateproduct
    spec:
      serviceAccount: efs-provisioner
      containers:
        - name: affiliateproduct
          image: 985702435631.dkr.ecr.ap-northeast-2.amazonaws.com/affiliateproduct:latest
          ports:
            - containerPort: 8080
#          resources:
#            requests:
#              memory: "256Mi"
#              cpu: "1000m"
#            limits:
#              memory: "512Mi"
#              cpu: "2500m"
#          args:
#            - /bin/sh
#            - -c
#            - touch /tmp/healthy; sleep 90; rm -rf /tmp/healthy; sleep 600
#          readinessProbe:
#            httpGet:
#              path: '/actuator/health'
#              port: 8080
#            exec:
#              command:
#              - cat
#              - /tmp/healthy
#            initialDelaySeconds: 25
#            timeoutSeconds: 2
#            periodSeconds: 5
#            failureThreshold: 5
#            successThreshold: 1
#          livenessProbe:
#            httpGet:
#              path: '/actuator/health'
#              port: 8080
#            exec:
#              command:
#              - cat
#              - /tmp/healthy
#            initialDelaySeconds: 60
#            timeoutSeconds: 2
#            periodSeconds: 5
#            failureThreshold: 5
#            successThreshold: 1
          volumeMounts:
          - mountPath: "/mnt/aws"
            name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: aws-efs
