kubernetes/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: affiliateproduct
  namespace: airbnb
spec:
  hosts:
  - affiliateproduct
  http:
  - route:
    - destination:
        host: affiliateproduct
        subset: version-v1
      weight: 100
---
